# Egg-CommandLine

./: CMakeLists.txt  README.md  egg-command-line.cmake.in  egg-command-line.pc.in
documentation/: ToDo
include/: CMakeLists.txt
include/egg/commandline/: description.hpp  option.hpp  options.hpp  processor.hpp  utility.hpp
source/: CMakeLists.txt  description.cpp  option.cpp  options.cpp  processor.cpp  utility.cpp
test/: t01.cpp
